# AgenticAIBootcamp

./: .env.example  README.md  pyproject.toml
1-Foundation_Agentic_AI/: 1-First_Workflow.ipynb  2-Build_ChatBot.ipynb  3-Pydantic_Data_Validation.ipynb  4-Multi_LLM_Model.ipynb  5-Push_Notification_LLMs.ipynb
