[project]
name = "agenticaibootcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "gradio>=6.20.0",
    "ipykernel>=7.3.0",
    "ipython>=9.15.0",
    "langchain>=1.3.11",
    "openai>=2.44.0",
    "pypdf>=6.14.2",
    "requests>=2.34.2",
    "tensorflow>=2.21.0",
]
